extensions/wikia/LocalNavigation/styles/LocalNavigation.scss
@import 'skins/shared/mixins/arrow';
@import 'skins/shared/mixins/calc';
@import 'skins/shared/mixins/clearfix';
@import 'skins/shared/color';
@import 'extensions/wikia/Venus/styles/variables';

.local-navigation {
	@include clearfix;

	background-color: $color-page;
	box-sizing: border-box;
	height: 80px;

	*, *:before, *:after {
		box-sizing: inherit;
	}

	> nav {
		float: left;
	}

	.contribute {
		background-color: $color-buttons;
		color: $color-button-text;
		display: inline-block;
		position: relative;
	}

	.contribute-button {
		display: table-cell;
		font-size: 12px;
		font-weight: bold;
		height: 40px;
		padding: 8px 15px 8px 20px;
		position: relative;
		text-transform: uppercase;
		vertical-align: middle;

		&:after {
			border: 5px solid;
			border-top-color: $color-button-text;
			color: transparent;
			content: ' ';
			display: inline-block;
			margin: 5px 0 0 15px;
			position: relative;
			top: 3px;
		}
	}

	.dropdown {
		display: table;
		position: absolute;
		z-index: 500050;
		left: 0;
		right: auto;

		&.right {
			left: auto;
			right: -1px;

			li {
				a, a:after {
					text-align: right;
				}
				a span {
					left: auto;
					right: 20px;
				}
			}
		}

		li {
			display: table-row;
			height: 51px;
			list-style: none;

			a {
				background-color: $color-buttons;
				color: $color-button-text;
				display: table-cell;
				padding: 20px;
				text-decoration: none;
				vertical-align: middle;
				white-space: nowrap;
				width: 100%;


				&:hover {
					font-weight: bold;
				}

				&:after {
					content: attr(data-content);
					font-weight: bold;
					visibility: hidden;
				}

				span {
					position: absolute;
					left: 20px;
					right: auto;
				}
			}

			&:nth-child(n + 2) a {
				border-top: 1px solid rgba($color-button-text, .2);
			}
		}
	}

	.wordmark-container {
		display: table;
		float: left;
		height: 100%;
		padding: 0 40px 0 32px;

		.wordmark {
			display: table-cell;
			vertical-align: middle;
			width: 160px;

			.wordmark-text {
				display: inline-block;
				max-height: 80px;
				overflow: hidden;

				&.large {
					font-size: 27px;
				}

				&.medium {
					font-size: 24px;
				}

				&.small {
					font-size: 20px;
				}
			}
		}
	}

	a {
		color: inherit;
		&:hover {
			text-decoration: none;
		}
	}
	ul.first {
		height: 60px;
		padding-top: 20px;

		> li {
			display: block;
			float: left;
			height: 100%;
			position: relative;

			> a {
				display: block;
				font-size: 15px;
				font-weight: bold;
				height: 100%;
				line-height: 45px;
				padding: 0 20px;
			}

			&:nth-child(n + 2) {
				border-left: 1px solid $color-page-border;
			}

			&.active {
				background: $color-buttons;
				border-color: $color-page;
				color: $color-button-text;

				ul.second {
					display: table;
				}
			}
			&.active + li {
				border-color: $color-page;
			}
		}
	}

	ul.dropdown {
		display: none;
	}
	
	ul.second {
		min-width: -webkit-calc(100% + 1px);
		min-width: calc(100% + 1px);

		a.has-more {
			padding-right: 40px;
			span {
				left: 20px;
				right: 40px;
			}
			span::after {
				@include arrow(4px, rgba($color-button-text, .5), 'right');
				margin: 1px -20px 0 0;
				position: static;
				float: right;
				content: ' ';
			}
			&:hover span::after {
				border-left-color: rgba($color-button-text, .8);
			}
		}
		&.right {
			a.has-more {
				padding-left: 40px;
				span {
					left: 40px;
					right: 20px;
				}
				span::after {
					@include arrow(4px, rgba($color-button-text, .5), 'left');
					margin: 1px 0 0 -20px;
					float: left;
				}
				&:hover span::after {
					border-right-color: rgba($color-button-text, .8);
				}
			}
			ul.third {
				right: 100%;
			}

		}
		li.active {
			ul.third {
				visibility: visible;
			}
		}
	}
	ul.third {
		background: none;
		display: block;
		height: 100%;
		left: auto;
		top: 0;
		visibility: hidden;

		li {
			background: $color-buttons;
			height: 31px;

			&:first-child a {
				border-top-width: 5px;
			}
			&:last-child a {
				border-bottom-width: 5px;
			}
			&:nth-child(n + 2) a {
				border-top: 1px solid $color-buttons;
			}
		}
		a {
			padding: 10px;

			border-color: $color-buttons;
			border-style: solid;
			border-right-width: 5px;
			border-left-width: 5px;

			&:hover {
				font-weight: normal;
			}
		}
		@if lightness($color-buttons) < 50 {
			a {
				background: rgba(#fff, .2);
				&:hover {
					background: rgba(#fff, .4);
				}
			}
		}
	@else {
			a {
				background: rgba(#000, .2);
				&:hover {
					background: rgba(#000, .4);
				}
			}
		}
	}
}

.local-navigation-container {
	@include clearfix;
}

@media #{$medium-only} {
	.local-navigation .wordmark-container {
		padding-left: 30px;
	}
}

@media #{$small-only} {
	.local-navigation .wordmark-container {
		padding: 0 30px 0 24px;
	}
}

