CON-1707 | Fix bleeding of styles from 2nd to 3rd level

--- a/extensions/wikia/LocalNavigation/styles/LocalNavigation.scss
+++ b/extensions/wikia/LocalNavigation/styles/LocalNavigation.scss
@@ -103,9 +103,9 @@
 				}
 			}
 
-			&:nth-child(n + 2) a {
-				border-top: 1px solid rgba($color-button-text, .2);
-			}
+		}
+		> li:nth-child(n + 2) > a {
+			border-top: 1px solid rgba($color-button-text, .2);
 		}
 	}
 
